[gd_scene load_steps=4 format=3 uid="uid://cv0ngr4w30qpr"]

[ext_resource type="Script" uid="uid://bq5kfsvmeasum" path="res://scenes/main/MainMenu.gd" id="1_qi05h"]
[ext_resource type="Texture2D" uid="uid://b1mdpl8dbavaf" path="res://assets/backgrounds/Battleground2.png" id="2_uort0"]

[sub_resource type="FontFile" id="FontFile_uort0"]
cache/0/30/0/ascent = 0.0
cache/0/30/0/descent = 0.0
cache/0/30/0/underline_position = 0.0
cache/0/30/0/underline_thickness = 0.0
cache/0/30/0/scale = 1.0
cache/0/16/0/ascent = 0.0
cache/0/16/0/descent = 0.0
cache/0/16/0/underline_position = 0.0
cache/0/16/0/underline_thickness = 0.0
cache/0/16/0/scale = 1.0

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_qi05h")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -384.0
offset_top = -216.0
offset_right = 384.0
offset_bottom = 216.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_uort0")

[node name="VBoxContainer" type="VBoxContainer" parent="TextureRect"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 15
alignment = 1

[node name="Label" type="Label" parent="TextureRect/VBoxContainer"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 1
theme_override_colors/font_color = Color(0.95686275, 0.77254903, 0.25882354, 1)
theme_override_fonts/font = SubResource("FontFile_uort0")
theme_override_font_sizes/font_size = 30
text = "TRICK TOWER"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="TextureRect/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 20
alignment = 1

[node name="Start Button" type="Button" parent="TextureRect/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(200, 50)
layout_mode = 2
text = "Mulai"

[node name="Setting Button" type="Button" parent="TextureRect/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(200, 50)
layout_mode = 2
text = "Pengaturan"

[node name="Exit Button" type="Button" parent="TextureRect/VBoxContainer"]
custom_minimum_size = Vector2(150, 50)
layout_mode = 2
size_flags_horizontal = 4
text = "Keluar"

[connection signal="pressed" from="TextureRect/VBoxContainer/HBoxContainer/Start Button" to="." method="_on_start_button_pressed"]
[connection signal="pressed" from="TextureRect/VBoxContainer/HBoxContainer/Setting Button" to="." method="_on_setting_button_pressed"]
[connection signal="pressed" from="TextureRect/VBoxContainer/Exit Button" to="." method="_on_exit_button_pressed"]
